fixing console warning by overflow content

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,10 +6,12 @@
   position: relative;
   text-align: center;
   width: 100%;
+  overflow-x: auto;
 
   h1 {
-    margin-top: 0;
     padding-top: 20px;
+    margin-top: 0;
+    width: 100%;
   }
 
   * {
